# cursos-y-libros

./: .gitignore  The ANSI C Programming Language.epub  The C++ Programming Language, 4th Edition.epub
Advent of Code/2024/: makefile
CSES Problem Set/: weird_algorithm.py
Campamento Iberoamericano 2024-2025/: makefile  search_peek.cpp  shifted_list.cpp  todo.md
Curso CP/: defines_utiles.cpp  recomendaciones.md
Guide to Competitive Programming/: 4.3_binary_search.cpp  a.out  makefile  testing.cpp
Python Crash Course/: three_restaurants.py  users.py
React.dev/vite-project/: package-lock.json
The C Programming Language/: 1-010.c  1-016.c  1-018.c  1-020.c  1-10.c  1-12.c  1-13.c  1-16.c  1-7.c  1-8.c  1-9.c
The C Programming Language/1-2 fahrenheit-celsius/: a.out  converter.c
The C Programming Language/e1-8/: out
The C Programming Language/e1-9/: a.out  program.c
The C Programming Language/putchar_til_EOF/: writer.c
The C Programming Language/temperature_conversion/: a.out
The Recursive Book of Recursion/ejercicios/: concat.js  sumarHasta.js
The Recursive Book of Recursion/resources/: ackermannIterative.html  binarySearch.html  breakByIteration.html  breakByRecursion.html  cardStack.html  cardStack.py  combinations.py  (+32 more)
bevy/buscaminas/: Cargo.toml
bevy/buscaminas/src/: main.rs
guide-to-competitive-programming/: testing.cpp
python_crash_course/: restaurant.py
taller-famaf/: 118a.cpp  makefile  maximum-subarray-sum.cpp  static-range-sum-queries.cpp
tc25/: mr-bender-and-square.cpp
the-c-programming-language/: 1-011.c  1-018.c  makefile
(+196 files in other folders)
